{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 389,
  "lineage": "5fd04827-aa68-d42b-9056-3e2546784d34",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "spoke",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0a48cb5a-2ab9-463a-b1d7-b4478df386c1/resourceGroups/rg-ai-spoke/providers/Microsoft.Network/networkSecurityGroups/nsg-ai-spoke",
            "location": "centralus",
            "name": "nsg-ai-spoke",
            "resource_group_name": "rg-ai-spoke",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "spoke_allow_https_out",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Internet",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/0a48cb5a-2ab9-463a-b1d7-b4478df386c1/resourceGroups/rg-ai-spoke/providers/Microsoft.Network/networkSecurityGroups/nsg-ai-spoke/securityRules/Allow-HTTPS-Out",
            "name": "Allow-HTTPS-Out",
            "network_security_group_name": "nsg-ai-spoke",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-ai-spoke",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_network_security_group.spoke",
            "module.network.azurerm_resource_group.spoke"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a015136f-4eb9-4ec6-bde8-c8d57faa6806",
            "id": "/subscriptions/0a48cb5a-2ab9-463a-b1d7-b4478df386c1/resourceGroups/rg-network-hub/providers/Microsoft.Network/virtualNetworks/vnet-hub",
            "location": "centralus",
            "name": "vnet-hub",
            "resource_group_name": "rg-network-hub"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.azurerm_resource_group.hub"
          ]
        }
      ]
    }
  ]
}